--- a/client-side/package.json
+++ b/client-side/package.json
@@ -2,19 +2,50 @@
   "name": "client-side",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://deepcrazy.github.io/eventchain",
   "dependencies": {
+    "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.44",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "bignumber.js": "^9.0.0",
+    "bn.js": "^5.1.1",
+    "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
+    "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "cross-env": "^2.0.0",
+    "css-loader": "^0.26.1",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.2",
+    "moment": "^2.17.1",
+    "node-sass": "^4.13.1",
+    "nodemon": "^1.11.0",
+    "react": "^16.12.0",
+    "react-addons-test-utils": "^15.2.1",
+    "react-bootstrap-table": "^2.7.1",
+    "react-dom": "^16.12.0",
+    "react-number-format": "^4.3.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^2.6.0",
+    "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.5",
+    "react-scripts": "3.4.0",
+    "recharts": "^2.0.0-beta.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "router": "^1.1.4",
+    "serve-favicon": "^2.3.2",
+    "style-loader": "^0.13.1",
+    "web3": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +61,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "add": "^2.0.6",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   }
 }
